Kubernetes/metallb/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: metallb-ingress
  namespace: metallb-system
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: metallb-system-metallb-metrics@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
  - host: metallb.k8s.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: metallb-webhook-service
            port:
              number: 7472
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: metallb-metrics
  namespace: metallb-system
spec:
  replacePath:
    path: /metrics
